--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/NathanHogan16/ORM-Back-End#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
   }
